<resources>
    <string name="app_name">6度</string>
    <string name="app_id">487212794762362</string>
    <string name="title_localPhotos">全部图片</string>
    <string name="title_clip_profile_pic">设置头像</string>
    <string name="url_add">en</string>
    <string name="url_api">http://get6deg.com/</string>
    <string name="url_log_api">http://log.shiguangxiaowu.cn</string>
    <string name="account_region">cn</string>
    <string name="me">我</string>
    <string name="action_settings">设置</string>
    <string name="actionBar_selectBtn">选择</string>
    <string name="home_tab_folder">相册</string>
    <string name="home_tab_album">本地图库</string>
    <string name="takePhotoToFolder">拍摄照片</string>
    <string name="camera_open_error">相机出了点问题</string>
    <string name="camera_save_error">保存失败，再试一次？</string>
    <string name="qq">QQ</string>
    <string name="line">Line</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="weiboNotInstall">新浪微博没有安装</string>
    <string name="sms">短信</string>
    <string name="sharing">正在分享…</string>
    <string name="shareToPac">分享到圈子</string>
    <string name="share_failed">分享失败，请稍后再试</string>
    <string name="share_picture_title">6度</string>
    <string name="share_picture_content">分享照片(发自:6度)</string>
    <string name="seeAll">查看全部</string>
    <string name="commentPhoto">评论这张照片</string>
    <string name="commentSbPhoto">评论%s的动态...</string>
    <string name="commentFail">评论失败，请稍后再试</string>
    <string name="coments">照片评论</string>
    <string name="coments_no_empty">你的回复…</string>
    <string name="caption_hint">照片背后的故事…</string>
    <string name="coments_reply_to_hint">回复 %s</string>
    <string name="coments_like">回复%s的赞</string>
    <string name="enter_homepage">进入%s的主页</string>
    <string name="coments_to">"%s: "</string>
    <string name="coments_reply_to">"%1$s 回复 %2$s: "</string>
    <string name="coments_privacy_to">"%s 私密评论: "</string>
    <string name="coments_privacy_reply_to">"%1$s 私密回复 %2$s: "</string>
    <string name="modifyDesc">照片描述</string>
    <string name="pendant">贴图</string>
    <string name="filter">滤镜</string>
    <string name="delete">删除</string>
    <string name="deleteCmt">删除评论</string>
    <string name="deletePendant">真的要删除这个贴图?</string>
    <string name="description">描述</string>
    <string name="publicStr">公开</string>
    <string name="beautify">美化</string>
    <string name="saveDone">Saved to: %s</string>
    <string name="saveFail">Oops…something went awry</string>
    <string name="notUploadedTryLater">Please try again after syncing</string>
    <string name="cancelSelected">Cancel Selected(%d)</string>
    <string name="removeToRecycle">Move to Trash</string>
    <string name="alreadyShare">Shared</string>
    <string name="createFolder">New Album</string>
    <string name="newAlbum">New Album</string>
    <string name="editFolder">Edit Album</string>
    <string name="addContacts">Add Contact</string>
    <string name="exitGroup">Leave Group</string>
    <string name="exitSharedFolder">Leave Shared Album</string>
    <string name="addSharer">Add Member</string>
    <string name="noFolderTips">"No Albums here. \nCreate one? "</string>
    <string name="folderAddMembersTips">"You can share this Album with \n your family and friends"</string>
    <string name="modifyFolderIcon">Change Icon</string>
    <string name="modifyFolderName">Edit Name</string>
    <string name="inputFolderName">Name</string>
    <string name="nullFolderIcon">You have not chosen the album icon.</string>
    <string name="nullFolderIconColor">You have not chosen the album icon color</string>
    <string name="nullFolderName">"You don't have a name for the album."</string>
    <string name="folderManage">Album Settings</string>
    <string name="folderCreate">Add Album</string>
    <string name="folderSelectPictureAsIcon">Use pictures as icons</string>
    <string name="folderIconTitle">Set album icon</string>
    <string name="folderDefineIcon">Album Icon</string>
    <string name="folderSelectIcon">Shapes</string>
    <string name="folderSelectColor">Colors</string>
    <string name="folderSelectCustomIcon">Use Icon</string>
    <string name="folderSelectPicture">Use Photo</string>
    <string name="folderShareAccept">Notifications</string>
    <string name="confirmDeleteFolder">"Are you sure you wish to delete \"%s\"?"</string>
    <string name="exit_folder_done">Exited The Folder</string>
    <string name="delete_done">Folder was deleted</string>
    <string name="confirmExitSharedFolder">Are you sure to leave this shared album?</string>
    <string name="folderNameNull">Oops…please name the album</string>
    <string name="folderNameError">Oops…no invalid symbols</string>
    <string name="folderGuideTips">Select some categories of interest</string>
    <string name="ffGuideTips">6度也能看到朋友的动态了，发布时\n如果勾选发布到“朋友动态”那么朋友\n也能看到你发布的内容</string>
    <string name="ffGuideTitle2">朋友动态</string>
    <string name="chooseCategory">Select Album</string>
    <string name="noGroupTips">"Wanna share some moments with friends? Let\'s start a new Pac"</string>
    <string name="newPac">New Pac</string>
    <string name="folder_share_after_sync">Oops…please retry after syncing is done</string>
    <string name="folder_edit_done">Succeeded</string>
    <string name="folder_edit_undone">Failed</string>
    <string name="folder_create_done">Succeeded</string>
    <string name="folder_create_undone">Failed</string>
    <string name="folder_wait_invite_create">Oops…something went    </string>
    <string name="shared_folder_invited_done">Succeeded</string>
    <string name="shared_folder_invited_undone">Failed</string>
    <string name="shared_folder_reject_done">Succeeded</string>
    <string name="shared_folder_reject_undone">Failed</string>
    <string name="syncing">Synchronizing…</string>
    <string name="syncingFail">Synchronizing failed</string>
    <string name="exitTips">Tap again back button to quit</string>
    <string name="selectedCountTips">%d Selected</string>
    <string name="confirmDeleteMoment">Are you sure you wish to delete %d photos?</string>
    <string name="noSelected">Please select item</string>
    <string name="noPhotosInAlbum">"Looks a little lonely around here \n Lets pac some photos!"</string>
    <string name="noPhotosInGroup">"Photos can be shared with unregistered \n friends via auto SMS with photo link"</string>
    <string name="confirmDeleteTrash">Are you sure you want to remove the%d picture completely from the recycle bin?</string>
    <string name="confirmClearAllTrash">Are you sure you wish to empty Trash?</string>
    <string name="msgCanNotCmt">内容已经消失，无法评论</string>
    <string name="community_expand">全部%d条评论</string>
    <string name="community_unread_cmts">%d个新评论</string>
    <string name="community_unread_likes">%d个喜欢</string>
    <string name="community_unread">%1$d个新评论，%2$d个喜欢</string>
    <string name="community_comments_all_got">内容已经全部获取了</string>
    <string name="community_comments_all_clear">已经清空了全部通知哟</string>
    <string name="community_comments_all_clear_confirm">真的要清空全部通知？</string>
    <string name="community_unread_divid">,</string>
    <string name="welcomeToPac">Welcome to 6Deg</string>
    <string name="welcomeToPacDesc">"6Deg is a link to you and your friend's album, let's see what ta can do"</string>
    <string name="folderGuideDesc">You can create a different category of album, and family and friends together to manage photos.</string>
    <string name="groupGuideDesc">Can also create a shared group with friends, sharing photos anytime, anywhere.</string>
    <string name="groupGuideDesc2">"Click to add a shared group, quickly to share photos \n to many friends"</string>
    <string name="start">Start</string>
    <string name="allPhotos">All Photos</string>
    <string name="inviteByFolder">invited by %s</string>
    <string name="deleteShareFolder">Are you sure to remove him/her from member list?</string>
    <string name="folderMemberInvited">"%1$s want to share the \"%2$s\" album with you"</string>
    <string name="yourFriend">Your friends</string>
    <string name="app_unread">%d invitations</string>
    <string name="selectedContactEmpty">No friend selected</string>
    <string name="phoneContacts">手机联系人</string>
    <string name="searchContacts">Enter name or phone Num to search</string>
    <string name="deleteContacts">Are you sure to delete this contact</string>
    <string name="inviteContacts">invited by %s</string>
    <string name="groupName">Name</string>
    <string name="creater">Pac Leader</string>
    <string name="createGroup">New Pac</string>
    <string name="noSelectedConstacts">No friend selected</string>
    <string name="groupNameInput">Enter Pac name</string>
    <string name="exitPacTips">Are you sure to leave this Pac?</string>
    <string name="groupMemberInvited">unregistered</string>
    <string name="groupCommentNotification">Notifications</string>
    <string name="groupCommentNotificationMore">Earlier ones</string>
    <string name="groupCommentNotificationComment">%s评论了你</string>
    <string name="groupPrivateCommentNotificationComment">%s私密评论了你</string>
    <string name="groupCommentNotificationReply">%1$s回复了%2$s</string>
    <string name="groupPrivateCommentNotificationReply">%1$s私密回复了%2$s</string>
    <string name="groupCommentNotificationLike">%s赞了你</string>
    <string name="selectPhoneCode">Area Code</string>
    <string name="personalGender">性别</string>
    <string name="personalLocation">所在地</string>
    <string name="personalSchool">学校/公司</string>
    <string name="personalJob">职业</string>
    <string name="personalIntro">个人简介</string>
    <string name="personalGenderMan">男</string>
    <string name="personalGenderWoman">女</string>
    <string name="personalLocationHint">输入所在地</string>
    <string name="personalLocationTipGPS">GPS定位</string>
    <string name="personalSchoolHint">输入学校/公司</string>
    <string name="personalJobHint">输入职业</string>
    <string name="personalIntroHint">输入个人简介</string>
    <string name="personalBackground">修改背景图</string>
    <string name="personalAvatar">修改头像</string>
    <string name="personalSelectBackground">选择背景图</string>
    <string name="personalSelectBgPic">选择照片</string>
    <string name="selectAlbum">选择相册</string>
    <string name="personal">我</string>
    <string name="account">个人信息</string>
    <string name="avatar">头像</string>
    <string name="nickName">真实姓名</string>
    <string name="addAvatar">添加头像</string>
    <string name="noAvatar">还没设置头像</string>
    <string name="clickToSetNickname">这里输入名字</string>
    <string name="noNickname">还没有入名字</string>
    <string name="change_pwd">修改密码</string>
    <string name="setting">设置</string>
    <string name="dataTraffic">数据流量</string>
    <string name="setting_inputPhotoFromTimehut">从时光小屋导入照片</string>
    <string name="uploadOnlyWIFI">仅在Wi-Fi下同步</string>
    <string name="clearCache">清除缓存</string>
    <string name="clear_done">清除成功</string>
    <string name="setting_star">给“6度”评星</string>
    <string name="setting_about">关于6度</string>
    <string name="setting_help">使用帮助</string>
    <string name="setting_feedback">建议和反馈</string>
    <string name="calculate">计算中…</string>
    <string name="setting_exit">退出</string>
    <string name="setting_dismiss">解散</string>
    <string name="setting_exit_confirm">真的要退出吗？</string>
    <string name="hopeYourFeedback">“6度”期待你的好建议</string>
    <string name="feedbackDone">感谢你帮助“6度”变得更好</string>
    <string name="setting_notify">消息提醒</string>
    <string name="setting_notify1">聊天消息</string>
    <string name="process_pic_filter">滤镜</string>
    <string name="process_pic_sticker">贴纸库</string>
    <string name="process_pic_say">说\n什\n么</string>
    <string name="process_pic_call">喊\n什\n么</string>
    <string name="process_pic_think">想\n什\n么</string>
    <string name="process_pic_aside">旁\n白</string>
    <string name="cartoonFrame2">漫画\n特效</string>
</resources>